--- a/c0nfig.conf
+++ b/c0nfig.conf
@@ -12,7 +12,7 @@ tmux:
     - ["tmux.conf", "~/.tmux.conf"]
 
 vim:
-    - ["vimrc", "~/.hurensohnrc"]
+    - ["vimrc", "~/.vimrc"]
     - ["autoload/plug.vim", "~/.vim/autoload/plug.vim"]
 
 wallpaper:
